# Desktop-drawing-App

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
actix-backend/: .env  Cargo.toml  Trunk.toml
actix-backend/conduit-frontend/: Cargo.toml
actix-backend/conduit-frontend/src/: app.rs  main.rs
actix-backend/conduit-frontend/src/routes/home/: canvas.rs  main_view.rs  mod.rs  tags.rs
actix-backend/conduit-frontend/src/types/: articles.rs
actix-backend/entity/: Cargo.toml
actix-backend/entity/src/: post.rs
actix-backend/frontend/: Cargo.toml  index.html  package.json
actix-backend/frontend/src/: app.rs  lib.rs  main.rs
actix-backend/frontend/src/components/: article_list.rs  article_preview.rs  header.rs  mod.rs
actix-backend/frontend/src/routes/: home.rs  main_view.rs  mod.rs
actix-backend/frontend/src/routes/home/: canvas.rs  main_view.rs  mod.rs
actix-backend/frontend/src/services/: articles.rs  mod.rs  tags.rs
actix-backend/frontend/src/types/: articles.rs  mod.rs  tags.rs
actix-backend/migration/: Cargo.toml
actix-backend/migration/src/: create_chem_table.rs  lib.rs  main.rs
actix-backend/my-yew-front/: Cargo.toml  index.html
actix-backend/my-yew-front/src/: api.rs  lib.rs  login.rs  main.rs  router.rs  store.rs
actix-backend/my-yew-front/src/components/atoms/: custom_button.rs  delete_button.rs  main_title.rs  mod.rs  show_label.rs  text_input.rs
actix-backend/my-yew-front/src/components/molecules/: mod.rs  (+3 more)
actix-backend/src/: main.rs
actix-backend/templates/: edit.html.tera  index.html.tera  new.html.tera
(+169 files in other folders)
