[package]
name = "actix_seaorm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration","my-yew-front"]

[dependencies]
futures = { version = "0.3" }
futures-util = { version = "0.3" }
tera = "1.15.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
listenfd = "0.5.0"
dotenv = "0.15.0"
serde = "1.0.137"

actix-web = "4"
actix-http = "2"
actix-flash = "0.2.0"
actix-files = "0.5"
# tokio = { version = "1.18.2", features = ["full"] }

entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.8.0", features = ["debug-print", "runtime-actix-native-tls", "sqlx-postgres"] }

