[package]
name = "my-yew-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version="0.10", features = ["yew"]}
gloo = "0.6"
wasm-bindgen = "0.2"
web-sys = {version="0.3", features=["HtmlInputElement"]}
yew-router = "0.16"
yewdux = "0.7"
yewdux-functional = "0.1"
reqwasm = {version="0.5.0"}
serde = "1.0"
serde_json = "1.0"

wasm-bindgen-futures = "0.4"


